-
Bug
-
Resolution: Done
-
P2: Important
-
5.14.2
-
None
-
macOS 10.15.2
-
-
46fb39ef5ab5dff2d442ac382f0790afd265dc9d (qt/qtbase/dev) f725796bd0a069f9024cc958bdb83901a24db391 (qt/qtbase/5.15)
NB: I tested the same on Windows and it works as expected, this issue is specific to macOS.
Configuring Qt with a custom -qtlibinfix doesn't work as expected on macOS.
Repro steps:
./configure -qtnamespace TestNameSpace -qtlibinfix TestSuffix -opensource -confirm-license -nomake examples -nomake tests make module-qtbase module-qttools sudo make module-qtbase-install_subtargets module-qttools-install_subtargets
The above build commands will build Qt with a custom libinfix (and namespace), but the libinfix makes it unusable:
- try to execute lrelease or any other tool that relies on the Qt libs, it will result in a segmentation fault. This doesn't happen if qtlibinfix is not used.
- try using the framework in Qt Creator: any inclusion of a Qt lib will fail (for instance #include <QtGui> ), as the lib won't be found. This doesn't happen if qtlibinfix is not used.
Using the exact same build commands on Windows works as expected.
- is duplicated by
-
QTBUG-84863 Qt build breaks with -qtlibinfix
-
- Closed
-