Fix crash on macOS with -qtlibinfix'ed Qt

When Qt is configured with -qtlibinfix Foo then the prefix determination code
in QLibraryInfo crashed, because it still assumed the library name to be
"QtCore".

Fixes: QTBUG-83912
Change-Id: I104e115ac6904fc0a04ac45d68d26d4e02aba721
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
(cherry picked from commit 46fb39ef5ab5dff2d442ac382f0790afd265dc9d)
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>